--- a/css/estilo.css
+++ b/css/estilo.css
@@ -131,62 +131,57 @@ main a:hover {
       
  }
 
- /* FOOTER */
+/* FOOTER */
 
- footer {
+ 
+ .contenedorSeguinos {
 
-    
-    height: 60px;
-    margin: 10px 0px;
-    padding: 10px;
-    background-color: #113408;
-    display: flex;
-    flex-direction: row;
-    justify-content:space-evenly;
-    align-items: center;
-
+   background-color: #113408;
+  
  }
 
+  
  .derechos {
     font-family: "Montserrat";
-    font-size: 15px;
-    color: white;
-    font-weight: lighter;
-    padding-bottom: 10px;
+    font-size: 0.8rem;
+    color: black;
+    font-weight: 350;
+    background-color: #78bc61
+    
       
  }
 
- .contenedorRedes {
-
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
- }
-
+ 
  .seguinos {
 
     font-family: "SemiBold";
-    padding: 5px;
     color: white;
-    font-size: 20px;
+    font-size: 1.3rem;
  }
 
  .redes {
     
-    padding: 10px;
     color: white;
     width: 20px
  }
 
  .redSocial {
 
-    width: 30px;
+    width: 34px;
     background-color: white;
     border-radius: 15px;
     border: white solid 2px;
 
- }
+ } 
+
+ .redSocial:hover {
+
+   width: 34px;
+   background-color:#C51F15;
+   border-radius: 15px;
+   border: #C51F15 solid 2px;
+
+} 
 
  /* SECCIONES */
 
