--- a/css/estilo.css
+++ b/css/estilo.css
@@ -87,6 +87,13 @@ main {
 
 
 /* BOTON COMENZAR */
+@keyframes pulsate {
+   0% { transform: scale(1); }
+   50% { transform: scale(1.1); }
+   100% { transform: scale(1); }
+ }
+ 
+
 main a {
 
     width: 180px;
@@ -103,26 +110,12 @@ main a {
     align-items: center;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
     transform: scale(1); 
-    transition: transform 0.2s ease-in-out;  
-    
-    
+    transition: transform 0.2s ease-in-out; 
+    animation: pulsate 1.5s infinite; 
+        
 }
 
-main a:hover {
 
-    width: 180px;
-    height: 70px;
-    background-color: rgba(255, 255, 255, 0.9);
-    font-size: 25px;
-    border-radius: 15px;
-    font-family: "SemiBold";
-    text-decoration: none;
-    color: black;
-    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
-    transform: scale(1.1); 
-    transition: transform 0.2s ease-in-out; 
-      
- }
 
 /* FOOTER */
 
