--- a/css/estilo.css
+++ b/css/estilo.css
@@ -48,7 +48,7 @@ background-color: #DC9556;
 nav ul li a {
     text-decoration: none;
     font-family: "SemiBold";
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     color: black;
     display: inline-block;
     padding: 20px 20px;
@@ -62,11 +62,12 @@ nav ul li a:hover {
     color: white;
 }
 
+/* TITULO PRINCIPAL DE LA WEB */
 
 h1 {
 
 font-family: "Montserrat";
-font-size: 2.1rem;
+font-size: 1.3rem;
 font-weight: bold;
 display: flex;
 flex-direction: row; 
@@ -197,7 +198,7 @@ main a {
     text-transform: uppercase;
     font-weight: bold;
     padding-bottom: 10px;
-    font-size: 2rem;
+    font-size: 1.5rem;
 
  }
 
@@ -207,7 +208,7 @@ main a {
    text-transform: uppercase;
    font-weight: bold;
    padding-bottom: 10px;
-   font-size: 2rem;
+   font-size: 1.5rem;
 }
 
 /* FUENTES H4 */
@@ -216,13 +217,13 @@ section h4 {
    text-transform: uppercase;
    font-weight: 500;
    padding-bottom: 10px;
-   font-size: 1.7rem;
+   font-size: 1.3rem;
 }
 
  /* FUENTES P */
  section p, span, li {
     font-family: "Montserrat";
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     
     
  }
