--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -1,206 +1,12 @@
-// VARIABLES
-$primary-color: #DC9556;
-$secondary-color: #FFD364;
-
-// FUENTES DEL DOCUMENTO
-@font-face {
-  font-family: Montserrat;
-  src: url(../fonts/Montserrat-VariableFont_wght.ttf);
-}
-
-@font-face {
-  font-family: SemiBold;
-  src: url(../fonts/static/Montserrat-SemiBold.ttf);
-}
-
-// BARRA DE NAVEGACION
-header nav {
-  background-color: $primary-color;
-}
-
-.iconoMenuMobile {
-  background-color: white;
-  color: black;
-}
-
-.fuenteMenuIconoMobile,
-.navbar-toggler {
-  font-family: "Montserrat";
-  font-size: 1rem;
-  font-weight: bold;
-  color: black;
-  border: none;
-}
-
-.logo {
-  width: 240px;
-  height: 85px;
-}
-
-nav {
-  ul {
-    li {
-      a {
-        text-decoration: none;
-        font-family: "SemiBold";
-        font-size: 1.2rem;
-        color: black;
-        display: inline-block;
-        padding: 20px 20px;
-
-        &:hover {
-          text-decoration: none;
-          font-size: 1.3rem;
-          color: white;
-        }
-      }
-    }
-  }
-}
-
-// TITULO PRINCIPAL DE LA WEB
-h1 {
-  font-family: "Montserrat";
-  font-size: 1.3rem;
-  font-weight: bold;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  margin: 5px;
-}
+@import "variables";
+@import "fuentes";
+@import "header";
+@import "portada";
+@import "secciones";
+@import "footer"; 
 
 
-// MAIN
-main {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-// Definición de la animación pulsate
-@keyframes pulsate {
-    0% {
-      transform: scale(1);
-    }
-    50% {
-      transform: scale(1.1);
-    }
-    100% {
-      transform: scale(1);
-    }
-  }
 
 
-  // BOTON COMENZAR
-  a {
-    width: 180px;
-    height: 70px;
-    background-color: rgba(255, 255, 255, 0.9);
-    display: flex;
-    font-size: 25px;
-    border-radius: 15px;
-    font-family: "SemiBold";
-    text-decoration: none;
-    color: black;
-    position: absolute;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
-    transform: scale(1);
-    transition: transform 0.2s ease-in-out;
-    animation: pulsate 1.5s infinite;
-  }
-}
 
-// FOOTER
-.contenedorSeguinos {
-  background-color: #113408;
-}
 
-.derechos {
-  font-family: "Montserrat";
-  font-size: 0.8rem;
-  color: black;
-  font-weight: 350;
-  background-color: $secondary-color;
-}
-
-.seguinos {
-  font-family: "SemiBold";
-  color: white;
-  font-size: 1.3rem;
-}
-
-.redes {
-  color: white;
-  width: 20px;
-}
-
-.redSocial {
-  width: 34px;
-  background-color: white;
-  border-radius: 15px;
-  border: white solid 2px;
-
-  &:hover {
-    width: 34px;
-    background-color: #C51F15;
-    border-radius: 15px;
-    border: #C51F15 solid 2px;
-  }
-}
-
-// SECCIONES
-.listaIngredientes {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.subtituloSeccion {
-  background-color: $secondary-color;
-  margin: 0;
-  padding: 0;
-}
-
-// FUENTES H2
-section {
-  h2 {
-    font-family: "Montserrat";
-    text-transform: uppercase;
-    font-weight: bold;
-    padding-bottom: 10px;
-    font-size: 1.5rem;
-  }
-
-  // FUENTES H3
-  h3 {
-    font-family: "Montserrat";
-    text-transform: uppercase;
-    font-weight: bold;
-    padding-bottom: 10px;
-    font-size: 1.5rem;
-  }
-
-  // FUENTES H4
-  h4 {
-    font-family: "Montserrat";
-    text-transform: uppercase;
-    font-weight: 500;
-    padding-bottom: 10px;
-    font-size: 1.3rem;
-  }
-
-  // FUENTES P
-  p,
-  span,
-  li {
-    font-family: "Montserrat";
-    font-size: 1.1rem;
-
-    // FUENTES P Negrita
-    &.pNegrita {
-      font-weight: bold;
-    }
-  }
-}
