--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,4 +1,9 @@
 @charset "UTF-8";
+/*SE REDUCE TODO EL HTML PARA AJUSTAR LOS REM*/
+html {
+  font-size: 70%;
+}
+
 /* FUENTES DEL DOCUMENTO */
 @font-face {
   font-family: Montserrat;
@@ -61,7 +66,7 @@ header nav {
 }
 
 .logo {
-  width: 180px;
+  width: 200px;
 }
 
 nav ul li a {
@@ -108,11 +113,11 @@ main {
   }
 }
 main a {
-  width: 180px;
-  height: 70px;
+  width: 12rem;
+  height: 5rem;
   background-color: rgba(255, 255, 255, 0.9);
   display: flex;
-  font-size: 25px;
+  font-size: 1.5rem;
   border-radius: 15px;
   font-family: "SemiBold";
   text-decoration: none;
@@ -124,6 +129,9 @@ main a {
   transform: scale(1);
   transition: transform 0.2s ease-in-out;
   animation: pulsate 1.5s infinite;
+}
+main a:hover {
+  font-size: 1.6rem;
 }
 
 /* SECCIONES */
