--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -1,3 +1,10 @@
+
+/*SE REDUCE TODO EL HTML PARA AJUSTAR LOS REM*/
+
+html {
+    font-size: 70%; 
+  }
+
 @import "variables";
 @import "fuentes";
 @import "header";
