Se corrigieron errores y se agrego nueva portada, lo unico que hay un conflicto entre la animación y el position abosolute. Se sigue buscando solucion mañana

--- a/scss/_portada.scss
+++ b/scss/_portada.scss
@@ -22,7 +22,7 @@ main {
   
   
 /*  BOTON COMENZAR */
-    a {
+   .botonComenzar {
       width: 12rem;
       height: 5rem;
       background-color: rgba(255, 255, 255, 0.9);
@@ -46,7 +46,6 @@ main {
       }
 
     }
-
 
 
   }
