--- a/css/estilo.css
+++ b/css/estilo.css
@@ -13,6 +13,12 @@ html {
   font-family: SemiBold;
   src: url(../fonts/static/Montserrat-SemiBold.ttf);
 }
+.tituloPrincipal {
+  font-family: "Montserrat";
+  font-weight: bold;
+  font-size: 3rem;
+}
+
 section h2 {
   font-family: "Montserrat";
   text-transform: uppercase;
@@ -112,7 +118,7 @@ main {
     transform: scale(1);
   }
 }
-main a {
+main .botonComenzar {
   width: 12rem;
   height: 5rem;
   background-color: rgba(255, 255, 255, 0.9);
@@ -130,7 +136,7 @@ main a {
   transition: transform 0.2s ease-in-out;
   animation: pulsate 1.5s infinite;
 }
-main a:hover {
+main .botonComenzar:hover {
   font-size: 1.6rem;
 }
 
