--- a/scss/_fuentes.scss
+++ b/scss/_fuentes.scss
@@ -11,7 +11,15 @@
   }
 
  
-  
+  //FUENTE TITULO PORTADA
+
+  .tituloPrincipal {
+
+    font-family: "Montserrat";
+      font-weight: bold;
+      font-size: 3rem;
+  }
+
   // FUENTES H2
   section {
     h2 {
