--- a/scss/_portada.scss
+++ b/scss/_portada.scss
@@ -1,50 +1,38 @@
-/*/ PORTADA INICIO */
 
-main {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  
-/*  Definición de la animación pulsate */
+.botonComenzar {
+  width: 12rem;
+  height: 5rem;
+  background-color: rgba(255, 255, 255, 0.9);
+  display: flex;
+  font-size: 1.5rem;
+  border-radius: 15px;
+  font-family: "SemiBold";
+  text-decoration: none;
+  color: black;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
+  transform: scale(1);
+  transition: transform 0.2s ease-in-out;
+  animation: pulsate 1.5s infinite;
 
-  @keyframes pulsate {
-      0% {
-        transform: scale(1);
-      }
-      50% {
-        transform: scale(1.1);
-      }
-      100% {
-        transform: scale(1);
-      }
-    }
-  
-  
-/*  BOTON COMENZAR */
-   .botonComenzar {
-      width: 12rem;
-      height: 5rem;
-      background-color: rgba(255, 255, 255, 0.9);
-      display: flex;
-      font-size: 1.5rem;
-      border-radius: 15px;
-      font-family: "SemiBold";
-      text-decoration: none;
-      color: black;
-      justify-content: center;
-      align-items: center;
-      box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
-      transform: scale(1);
-      transition: transform 0.2s ease-in-out;
-      animation: pulsate 1.5s infinite;
-
-      &:hover {
-        font-size: 1.6rem;
-        
-      }
-
-    }
-
-
+  &:hover {
+         font-size: 1.6rem;
   }
+}
+
+
+@keyframes pulsate {
+  0% {
+      transform: scale(1);
+  }
+  50% {
+      transform: scale(1.1);
+  }
+  100% {
+      transform: scale(1);
+  }
+}
