--- a/css/estilo.css
+++ b/css/estilo.css
@@ -97,6 +97,10 @@ h1 {
   margin: 5px;
 }
 
+.contenedorCarrusel {
+  position: relative;
+}
+
 .botonComenzar {
   width: 12rem;
   height: 5rem;
@@ -110,10 +114,12 @@ h1 {
   justify-content: center;
   align-items: center;
   position: absolute;
-  left: 50%;
-  top: 50%;
+  left: 0;
+  right: 0;
+  margin: auto;
+  transform: translateX(-50%);
+  top: 40%;
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
-  transform: scale(1);
   transition: transform 0.2s ease-in-out;
   animation: pulsate 1.5s infinite;
 }
