--- a/scss/_portada.scss
+++ b/scss/_portada.scss
@@ -1,4 +1,10 @@
 
+
+
+.contenedorCarrusel {
+  position: relative;
+}
+
 .botonComenzar {
   width: 12rem;
   height: 5rem;
@@ -12,17 +18,20 @@
   justify-content: center;
   align-items: center;
   position: absolute;
-  left: 50%;
-  top: 50%;
+  left: 0;
+  right: 0;
+  margin: auto;
+  transform: translateX(-50%);
+  top: 40%;
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
-  transform: scale(1);
   transition: transform 0.2s ease-in-out;
   animation: pulsate 1.5s infinite;
 
   &:hover {
-         font-size: 1.6rem;
+    font-size: 1.6rem;
   }
 }
+
 
 
 @keyframes pulsate {
