--- a/scss/_fuentes.scss
+++ b/scss/_fuentes.scss
@@ -11,54 +11,38 @@
   }
 
  
-  //FUENTE TITULO PORTADA
-
   .tituloPrincipal {
-
-    font-family: "Montserrat";
-      font-weight: bold;
-      font-size: 3rem;
+    font-weight: bold;
+    font-size: 3rem;
   }
-
-  // FUENTES H2
-  section {
-    h2 {
-      font-family: "Montserrat";
-      text-transform: uppercase;
-      font-weight: bold;
-      padding-bottom: 10px;
-      font-size: 1.5rem;
-    }
+    
+  @mixin estilo-textos {
+    font-family: "Montserrat";
   
-    // FUENTES H3
+      
+    h2,
     h3 {
-      font-family: "Montserrat";
       text-transform: uppercase;
       font-weight: bold;
       padding-bottom: 10px;
       font-size: 1.5rem;
     }
   
-    // FUENTES H4
     h4 {
-      font-family: "Montserrat";
       text-transform: uppercase;
       font-weight: 500;
       padding-bottom: 10px;
       font-size: 1.2rem;
     }
   
-    // FUENTES P
     p,
     span,
     li {
-      font-family: "Montserrat";
       font-size: 1.1rem;
   
-      // FUENTES P Negrita
       &.pNegrita {
         font-weight: bold;
       }
     }
   }
-  
+ 
