--- a/scss/_portada.scss
+++ b/scss/_portada.scss
@@ -1,3 +1,8 @@
+section {
+  @include estilo-textos;
+
+}
+
 
 .botonComenzar {
   width: 12rem;
@@ -39,3 +44,4 @@
       transform: scale(1);
   }
 }
+
