--- a/css/estilo.css
+++ b/css/estilo.css
@@ -63,33 +63,11 @@ h1 {
   margin: 5px;
 }
 
-section {
-  font-family: "Montserrat";
+@media (min-width: 991px) {
+  h1 {
+    font-size: 1.7rem;
+  }
 }
-section h2,
-section h3 {
-  text-transform: uppercase;
-  font-weight: bold;
-  padding-bottom: 10px;
-  font-size: 1.5rem;
-}
-section h4 {
-  text-transform: uppercase;
-  font-weight: 500;
-  padding-bottom: 10px;
-  font-size: 1.2rem;
-}
-section p,
-section span,
-section li {
-  font-size: 1.1rem;
-}
-section p.pNegrita,
-section span.pNegrita,
-section li.pNegrita {
-  font-weight: bold;
-}
-
 .botonComenzar {
   width: 12rem;
   height: 5rem;
@@ -116,6 +94,16 @@ section li.pNegrita {
   font-size: 1.6rem;
 }
 
+@media (min-width: 991px) {
+  .botonComenzar {
+    font-size: 2rem;
+    width: 14.5rem;
+    height: 6rem;
+  }
+  .botonComenzar:hover {
+    font-size: 2.1rem;
+  }
+}
 @keyframes pulsate {
   0% {
     transform: scale(1);
@@ -127,6 +115,11 @@ section li.pNegrita {
     transform: scale(1);
   }
 }
+.imgCarrusel {
+  height: 500px;
+  object-fit: cover;
+}
+
 /* SECCIONES */
 .listaIngredientes {
   list-style: none;
@@ -165,6 +158,20 @@ section p.pNegrita,
 section span.pNegrita,
 section li.pNegrita {
   font-weight: bold;
+}
+@media (min-width: 991px) {
+  section h2,
+  section h3 {
+    font-size: 2.5rem;
+  }
+  section h4 {
+    font-size: 1.8rem;
+  }
+  section p,
+  section span,
+  section li {
+    font-size: 1.7rem;
+  }
 }
 
 /* FOOTER */
