--- a/scss/_portada.scss
+++ b/scss/_portada.scss
@@ -1,9 +1,3 @@
-section {
-  @include estilo-textos;
-
-}
-
-
 .botonComenzar {
   width: 12rem;
   height: 5rem;
@@ -31,17 +25,37 @@ section {
   }
 }
 
+@media (min-width: 991px) {
+  .botonComenzar {
+    font-size: 2rem;
+    width: 14.5rem;
+    height: 6rem;
+
+    &:hover {
+      font-size: 2.1rem;
+    }
+
+
+  }
+}
+
 
 
 @keyframes pulsate {
   0% {
-      transform: scale(1);
+    transform: scale(1);
   }
+
   50% {
-      transform: scale(1.1);
+    transform: scale(1.1);
   }
+
   100% {
-      transform: scale(1);
+    transform: scale(1);
   }
 }
 
+.imgCarrusel {
+  height: 500px;
+  object-fit: cover;
+}
