Se terminó seccion calculadora y contacto con formula script y scss en ambas paginas

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -137,7 +137,7 @@ section {
   font-family: "Montserrat";
 }
 section h2,
-section h3 {
+section h3, section label {
   text-transform: uppercase;
   font-weight: bold;
   padding-bottom: 10px;
@@ -172,6 +172,61 @@ section li.pNegrita {
   section li {
     font-size: 1.7rem;
   }
+}
+
+.formularioCalculadora {
+  display: flex;
+  flex-direction: column;
+}
+
+.botonCalculadora {
+  background-color: white;
+  width: 100px;
+  height: 25px;
+  border: none;
+  font-family: "Montserrat";
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+.botonCalculadora:hover {
+  background-color: #78bc61;
+}
+
+.casillaCalculadora {
+  width: 80px;
+  height: 30px;
+  border: none;
+  font-size: 1.5rem;
+  font-weight: 500;
+  text-align: center;
+}
+
+.formContacto {
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-bottom: 10px;
+  height: 30px;
+}
+
+.formContactoTexto {
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-bottom: 10px;
+  height: 100px;
+}
+
+.botonEnviar {
+  background-color: white;
+  width: 100px;
+  height: 50px;
+  border: none;
+  font-family: "Montserrat";
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin: auto;
+}
+.botonEnviar:hover {
+  background-color: #78bc61;
 }
 
 /* FOOTER */
