--- a/scss/_fuentes.scss
+++ b/scss/_fuentes.scss
@@ -21,7 +21,7 @@
   
       
     h2,
-    h3 {
+    h3, label {
       text-transform: uppercase;
       font-weight: bold;
       padding-bottom: 10px;
