Se modificó en parte el home y se seguirá trabajando en algunos arreglos

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -271,6 +271,7 @@ section li.pNegrita {
 
 footer {
   border-top: 1.5px solid gray;
+  margin-top: 50vh;
 }
 
 /*# sourceMappingURL=estilo.css.map */
