--- a/scss/_portada.scss
+++ b/scss/_portada.scss
@@ -61,3 +61,18 @@
 }
 
 
+.separadorInicio {
+
+  width: auto;
+  height: 1.5rem;
+  background-color: $color-portada-separador;
+  margin-bottom: 1rem;
+
+}
+
+.iconoPortada {
+
+width: 100px;
+height: auto;
+
+}
