--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -4,3 +4,4 @@ $color-fondo-nav: #DC9556;
 $color-fondo-seccion:#FFD364;
 $color-fondo-footer-1:#113408;
 $color-fondo-footer-2: #78bc61;
+$color-portada-separador: #C51F15;
