--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -24,7 +24,7 @@ header nav {
 }
 
 nav {
-  border-bottom: 1.5px solid gray;
+  box-shadow: 0 3px 4px 0 rgba(0,0,0,.2);
   ul {
     li {
       a {
